<?xml version="1.0" encoding="utf-8"?>

<!--
    Для создания калькулятора решено использовать макет ConstraintLayout.
    Данный макет позволяет разместить большое количество элементов с привязкой друг к другу, а также к родительскому контейнеру.
    Это означает, что с данным макетом возможно точное позиционирование всех элементов, и спроектированное приложение будет одинаково хорошо отображаться на устройствах с различными размерами экранов.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:shadowColor="@color/dark_olive"
        android:shadowRadius="12"
        android:text="@string/disp_1"
        android:textAlignment="textEnd"
        android:textColor="@color/honey_dew"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@id/line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_2" />

    <View
        android:id="@+id/line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#696969"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display" />

    <View
        android:id="@+id/line_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#696969"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_1" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/line_1" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_divide"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/line_1" />

    <Button
        android:id="@+id/key_divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_divide"
        app:layout_constraintEnd_toStartOf="@id/key_clear"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/line_1" />

    <Button
        android:id="@+id/key_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_divide"
        app:layout_constraintTop_toBottomOf="@id/line_1" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_multiply"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <Button
        android:id="@+id/key_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_multiply"
        app:layout_constraintEnd_toStartOf="@id/key_square_root"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_divide" />

    <Button
        android:id="@+id/key_square_root"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_square_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_multiply"
        app:layout_constraintTop_toBottomOf="@id/key_clear" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <Button
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_minus"
        app:layout_constraintEnd_toStartOf="@id/key_negate"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_multiply" />

    <Button
        android:id="@+id/key_negate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/key_negate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_minus"
        app:layout_constraintTop_toBottomOf="@id/key_square_root" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/key_0"
        app:layout_constraintEnd_toEndOf="@id/key_8"
        app:layout_constraintStart_toStartOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toEndOf="@id/key_9"
        app:layout_constraintStart_toStartOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/key_plus"
        app:layout_constraintEnd_toEndOf="@id/key_minus"
        app:layout_constraintStart_toStartOf="@id/key_minus"
        app:layout_constraintTop_toBottomOf="@id/key_minus" />

    <Button
        android:id="@+id/key_equally"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/key_equally"
        app:layout_constraintEnd_toEndOf="@id/key_negate"
        app:layout_constraintStart_toStartOf="@id/key_negate"
        app:layout_constraintTop_toBottomOf="@id/key_negate" />

</androidx.constraintlayout.widget.ConstraintLayout>